migrate to microprobe from induction

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -71,14 +71,31 @@ position_max: 200
 uart_pin: PD0
 run_current: 0.5
 
+# START ### BIQU Micro Probe 
+[output_pin probe_enable]
+pin: PE5
+value: 0
+
+[gcode_macro Probe_Deploy]
+gcode:
+  SET_PIN PIN=probe_enable VALUE=1
+
+[gcode_macro Probe_Stow]
+gcode:
+  SET_PIN PIN=probe_enable VALUE=0
+
 [probe]
-pin: ^PE4
-x_offset: 0.0
-# y_offset: 2.4
-#z_offset: 4.0
-speed: 4
-samples: 3
-#sample_retract_dist: 6.0
+pin: ^!PE4
+x_offset: 24 # nozzle_x_position (124) - probe_x_position (100)
+y_offset: 0
+z_offset: 0
+deactivate_on_each_sample: False
+activate_gcode:
+  Probe_Deploy
+  G4 P500 # allow time for probe to deploy
+deactivate_gcode:
+  Probe_Stow
+# END ### BIQU Micro Probe END
 
 [safe_z_home]
 home_xy_position: 124, 100
@@ -140,10 +157,6 @@ max_temp: 110
 
 [fan]
 pin: PB7
-
-#[heater_fan fan1]
-# !!! Vbb used to power Z Probe
-#pin: PB6
 
 [heater_fan fan2]
 pin: PB5
