non editable block update

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -237,14 +237,47 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = 1.921
 #*#
 #*# [bed_mesh 240_85]
 #*# version = 1
 #*# points =
-#*# 	  -0.000833, 0.019167, 0.007500
-#*# 	  0.009167, 0.002500, -0.007500
-#*# 	  0.000833, -0.009167, -0.005000
+#*# 	-0.000833, 0.019167, 0.007500
+#*# 	0.009167, 0.002500, -0.007500
+#*# 	0.000833, -0.009167, -0.005000
+#*# x_count = 3
+#*# y_count = 3
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 16.0
+#*# max_x = 232.0
+#*# min_y = 0.0
+#*# max_y = 205.0
+#*#
+#*# [bed_mesh las probe with induction]
+#*# version = 1
+#*# points =
+#*# 	-0.018333, 0.005833, 0.007500
+#*# 	-0.041667, -0.012500, -0.027500
+#*# 	-0.002500, -0.030000, 0.011667
+#*# x_count = 3
+#*# y_count = 3
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 16.0
+#*# max_x = 232.0
+#*# min_y = 0.0
+#*# max_y = 205.0
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.007500, 0.037500, 0.027500
+#*# 	  -0.012500, -0.010000, -0.012500
+#*# 	  0.027500, -0.002500, 0.012500
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
