bed_mesh increase speed

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -66,6 +66,7 @@ rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_min: -2
 position_max: 200
+homing_speed: 10
 
 [tmc2209 stepper_z]
 uart_pin: PD0
@@ -102,8 +103,8 @@ home_xy_position: 124, 100
 z_hop: 15
 
 [bed_mesh]
-# speed: 100
-horizontal_move_z: 10
+speed: 120
+horizontal_move_z: 5
 mesh_min: 16, 0
 mesh_max: 232, 205
 probe_count: 3, 3
