fix probe offsets for correct positioning

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -87,8 +87,8 @@ gcode:
 
 [probe]
 pin: ^!PE4
-x_offset: 24 # nozzle_x_position (124) - probe_x_position (100)
-y_offset: 0
+x_offset: 0
+y_offset: 24 # nozzle_y_position (124) - probe_y_position (100)
 z_offset: 0
 deactivate_on_each_sample: False
 activate_gcode:
