--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -89,7 +89,7 @@ gcode:
 pin: ^!PE4
 x_offset: 0
 y_offset: 24 # nozzle_y_position (124) - probe_y_position (100)
-z_offset: 0
+#z_offset: 0
 deactivate_on_each_sample: False
 activate_gcode:
   Probe_Deploy
@@ -238,6 +238,7 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
+#*# z_offset = 1.625
 #*#
 #*# [bed_mesh 240_85]
 #*# version = 1
@@ -276,9 +277,9 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.007500, 0.037500, 0.027500
-#*# 	  -0.012500, -0.010000, -0.012500
-#*# 	  0.027500, -0.002500, 0.012500
+#*# 	0.007500, 0.037500, 0.027500
+#*# 	-0.012500, -0.010000, -0.012500
+#*# 	0.027500, -0.002500, 0.012500
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
