--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -24,13 +24,13 @@
 step_pin: PE2
 dir_pin: PE1
 enable_pin: !PE3
-rotation_distance: 40
 microsteps: 16
+rotation_distance: 40
 endstop_pin: tmc2209_stepper_x:virtual_endstop
-position_endstop: 0
-position_max: 244
-# homing_retract_dist: 7
-homing_speed: 20 # was 50
+position_endstop: -5
+position_min: -5
+position_max: 246
+homing_speed: 30
 
 [tmc2209 stepper_x]
 uart_pin: PE0
@@ -46,16 +46,17 @@ enable_pin: !PD6
 microsteps: 16
 rotation_distance: 40
 endstop_pin: tmc2209_stepper_y:virtual_endstop
-position_endstop: 0
-position_max: 210
-#homing_retract_dist: 7
-homing_speed: 20
+position_endstop: -5
+position_min: -5
+position_max: 207
+homing_speed: 30
 
 [tmc2209 stepper_y]
 uart_pin: PD3
 run_current: 0.50 # 800 mA
 diag_pin: ^PC3    # pin on the MCU where DIAG(end stop) is connected (active low)
 driver_SGTHRS: 64 # tuning value for sensorless homing -> 255 is most sensitive value, 0 is least sensitive
+#stealthchop_threshold: 999999
 
 [stepper_z]
 step_pin: PA15
@@ -88,7 +89,7 @@ gcode:
 [probe]
 pin: ^!PE4
 x_offset: 0
-y_offset: 24 # nozzle_y_position (124) - probe_y_position (100)
+# y_offset: 24 # nozzle_y_position (124) - probe_y_position (100)
 #z_offset: 0
 deactivate_on_each_sample: False
 activate_gcode:
