--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -1,25 +1,12 @@
-# Mainsail settings
+### UI
 [include mainsail.cfg]
 
-# This file contains common pin mappings for the BigTreeTech SKR 2.
-# To use this config, the firmware should be compiled for the
-# STM32F407 with a "32KiB bootloader".
+### CONTROL BOARD
+#BigTreeTech SKR 2
+[mcu]
+serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_240027000550415832393820-if00
 
-# In newer versions of this board shipped in late 2021 the STM32F429
-# is used, if this is the case compile for this with a "32KiB bootloader"
-# You will need to check the chip on your board to identify which you have.
-#
-# The "make flash" command does not work on the SKR 2. Instead,
-# after running "make", copy the generated "out/klipper.bin" file to a
-# file named "firmware.bin" on an SD card and then restart the SKR 2
-# with that SD card.
-
-# See docs/Config_Reference.md for a description of parameters.
-
-# Note: The initial revision of this board has a flaw that can cause
-# damage to itself and other boards. Be sure to verify the board is
-# not impacted by this flaw before using it.
-
+### STEPPERS
 [stepper_x]
 step_pin: PE2
 dir_pin: PE1
@@ -29,15 +16,9 @@ rotation_distance: 40
 endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_endstop: -5
 position_min: -5
-position_max: 246
+position_max: 242
 homing_speed: 30
-
-[tmc2209 stepper_x]
-uart_pin: PE0
-run_current: 0.50 # 800 mA
-diag_pin: ^PC1    # pin on the MCU where DIAG1(end stop) is connected (active low)
-driver_SGTHRS: 60 # tuning value for sensorless homing -> 255 is most sensitive value, 0 is least sensitive
-#stealthchop_threshold: 999999
+homing_retract_dist: 0
 
 [stepper_y]
 step_pin: PD5
@@ -50,13 +31,7 @@ position_endstop: -5
 position_min: -5
 position_max: 207
 homing_speed: 30
-
-[tmc2209 stepper_y]
-uart_pin: PD3
-run_current: 0.50 # 800 mA
-diag_pin: ^PC3    # pin on the MCU where DIAG(end stop) is connected (active low)
-driver_SGTHRS: 64 # tuning value for sensorless homing -> 255 is most sensitive value, 0 is least sensitive
-#stealthchop_threshold: 999999
+homing_retract_dist: 0
 
 [stepper_z]
 step_pin: PA15
@@ -66,14 +41,39 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_min: -2
-position_max: 200
-homing_speed: 10
+position_max: 229
+homing_speed: 15
+
+# Due to BTT implementing a Marlin-specific safety feature,
+# "anti-reversal stepper protection", this pin needs pulling
+# high to pass power to stepper drivers and most FETs
+[output_pin motor_power]
+pin: PC13
+value: 1
+
+### TMC2209
+[tmc2209 stepper_x]
+uart_pin: PE0
+run_current: 0.50 # 800 mA
+diag_pin: ^PC1    # pin on the MCU where DIAG1(end stop) is connected (active low)
+driver_SGTHRS: 60 # tuning value for sensorless homing -> 255 is most sensitive value, 0 is least sensitive
+#stealthchop_threshold: 999999
+
+[tmc2209 stepper_y]
+uart_pin: PD3
+run_current: 0.50 # 800 mA
+diag_pin: ^PC3    # pin on the MCU where DIAG(end stop) is connected (active low)
+driver_SGTHRS: 64 # tuning value for sensorless homing -> 255 is most sensitive value, 0 is least sensitive
 
 [tmc2209 stepper_z]
 uart_pin: PD0
 run_current: 0.5
 
-# START ### BIQU Micro Probe 
+[tmc2209 extruder]
+uart_pin: PC6
+run_current: 0.5
+
+### BIQU MICRO PROBE
 [output_pin probe_enable]
 pin: PE5
 value: 0
@@ -97,24 +97,33 @@ activate_gcode:
   G4 P500 # allow time for probe to deploy
 deactivate_gcode:
   Probe_Stow
-# END ### BIQU Micro Probe END
 
+### BED
 [safe_z_home]
 home_xy_position: 124, 100
-z_hop: 15
+z_hop: 5
+
+[heater_bed]
+heater_pin: PD7
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: PA1
+control: pid
+pid_Kp: 57.585
+pid_Ki: 1.055
+pid_Kd: 786.033
+min_temp: 10
+max_temp: 110
 
 [bed_mesh]
 speed: 120
 horizontal_move_z: 5
-mesh_min: 16, 0
+# mesh_min: 16, 0
+mesh_min: 16, 24
 mesh_max: 232, 205
 probe_count: 3, 3
 
-# [delayed_gcode bed_mesh_init]
-# initial_duration: .01
-# gcode:
-#   BED_MESH_PROFILE LOAD=default
 
+### EXTRUSION
 [extruder]
 step_pin: PD15
 dir_pin: PD14
@@ -142,59 +151,20 @@ min_temp: 0
 max_temp: 270
 #pressure_advance: 0.23
 
-[tmc2209 extruder]
-uart_pin: PC6
-run_current: 0.5
-
-[heater_bed]
-heater_pin: PD7
-sensor_type: EPCOS 100K B57560G104F
-sensor_pin: PA1
-control: pid
-pid_Kp: 57.585
-pid_Ki: 1.055
-pid_Kd: 786.033
-min_temp: 10
-max_temp: 110
-
+### Cooling
 [fan]
 pin: PB7
 
 [heater_fan fan2]
 pin: PB5
 
-# Due to BTT implementing a Marlin-specific safety feature,
-# "anti-reversal stepper protection", this pin needs pulling
-# high to pass power to stepper drivers and most FETs
-
-[output_pin motor_power]
-pin: PC13
-value: 1
-
-[mcu]
-serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_240027000550415832393820-if00
-
+### PRINTER
 [printer]
 kinematics: cartesian
 max_velocity: 300
 max_accel: 3000
-max_z_velocity: 5
-max_z_accel: 100
-
-########################################
-# EXP1 / EXP2 (display) pins
-########################################
-
-[board_pins]
-aliases:
-    # EXP1 header
-    EXP1_1=PC5, EXP1_3=PB1, EXP1_5=PE10, EXP1_7=PE12, EXP1_9=<GND>,
-    EXP1_2=PB0, EXP1_4=PE9, EXP1_6=PE11, EXP1_8=PE13, EXP1_10=<5V>,
-    # EXP2 header
-    EXP2_1=PA6, EXP2_3=PE7, EXP2_5=PB2, EXP2_7=PC4,   EXP2_9=<GND>,
-    EXP2_2=PA5, EXP2_4=PA4, EXP2_6=PA7, EXP2_8=<RST>, EXP2_10=<NC>
-
-# See the sample-lcd.cfg file for definitions of common LCD displays.
+max_z_velocity: 20
+max_z_accel: 20
 
 ########################################
 # Macros
