enable probe y_offset

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -89,7 +89,7 @@ gcode:
 [probe]
 pin: ^!PE4
 x_offset: 0
-# y_offset: 24 # nozzle_y_position (124) - probe_y_position (100)
+y_offset: 24 # nozzle_y_position (124) - probe_y_position (100)
 #z_offset: 0
 deactivate_on_each_sample: False
 activate_gcode:
