--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -166,6 +166,11 @@ max_accel: 1000
 max_z_velocity: 20
 max_z_accel: 100
 
+[axis_twist_compensation]
+calibrate_start_x: 20
+calibrate_end_x: 200
+calibrate_y: 124
+
 ########################################
 # Macros
 ########################################
@@ -261,3 +266,8 @@ gcode:
 #*# max_x = 232.0
 #*# min_y = 0.0
 #*# max_y = 205.0
+#*#
+#*# [axis_twist_compensation]
+#*# z_compensations = -0.077500, 0.025000, 0.052500
+#*# compensation_start_x = 20.0
+#*# compensation_end_x = 200.0
