increase TMC run_current and add stealthChop mode

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -54,20 +54,22 @@ value: 1
 ### TMC2209
 [tmc2209 stepper_x]
 uart_pin: PE0
-run_current: 0.50 # 800 mA
+run_current: 0.70 # 1.0 A
 diag_pin: ^PC1    # pin on the MCU where DIAG1(end stop) is connected (active low)
 driver_SGTHRS: 60 # tuning value for sensorless homing -> 255 is most sensitive value, 0 is least sensitive
-#stealthchop_threshold: 999999
+stealthchop_threshold: 999999
 
 [tmc2209 stepper_y]
 uart_pin: PD3
-run_current: 0.50 # 800 mA
+run_current: 0.70 # 1.0 A
 diag_pin: ^PC3    # pin on the MCU where DIAG(end stop) is connected (active low)
 driver_SGTHRS: 64 # tuning value for sensorless homing -> 255 is most sensitive value, 0 is least sensitive
+stealthchop_threshold: 999999
 
 [tmc2209 stepper_z]
 uart_pin: PD0
-run_current: 0.5
+run_current: 0.50 # 0.8 A
+stealthchop_threshold: 999999
 
 [tmc2209 extruder]
 uart_pin: PC6
@@ -102,6 +104,7 @@ deactivate_gcode:
 [safe_z_home]
 home_xy_position: 124, 100
 z_hop: 5
+z_hop_speed: 5
 
 [heater_bed]
 heater_pin: PD7
