add command to move bed forward after printing

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -205,6 +205,8 @@ gcode:
     # Raise nozzle by 10mm
     G1 Z10 F3000
     G90
+    # Move bed forward
+    G1 X124 Y207 F9000
     # Disable steppers
     M84
 
