add exclude_object for adaptive meshing

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -120,11 +120,9 @@ z_hop_speed: 5
 [bed_mesh]
 speed: 120
 horizontal_move_z: 5
-# mesh_min: 16, 0
 mesh_min: 16, 24
 mesh_max: 232, 205
 probe_count: 3, 3
-
 
 ### EXTRUSION
 [extruder]
@@ -168,6 +166,9 @@ max_velocity: 200
 max_accel: 1000
 max_z_velocity: 20
 max_z_accel: 100
+
+# Enable exclude_object for adaptive meshing
+[exclude_object]
 
 ########################################
 # Macros
