add comments to END_PRINT macro

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -197,19 +197,23 @@ gcode:
 [gcode_macro END_PRINT]
 gcode:
     # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
+    M140 S0                                            # Turn off the heated bed
+    M104 S0                                            # Turns off the hotend
+    M106 S0                                            # Turn off part cooling fan
+
     # Move nozzle away from print while retracting
-    G91
-    G1 X-2 Y-2 E-3 F300
+    G91                                                # Switch to relative positioning
+    G1 X-2 Y-2 E-3 F300                                # Retract filament by 3mm and move slightly back
+
     # Raise nozzle by 10mm
-    G1 Z10 F3000
-    G90
+    G1 Z10 F3000                                       # Move Z up by 10mm
+    G90                                                # Switch back to absolute positioning
+
     # Move bed forward
-    G1 X124 Y207 F9000
+    G1 X124 Y207 F9000                                 # Move bed forward to unload print
+    
     # Disable steppers
-    M84
+    M84                                                # Disable all stepper motors
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
