--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -175,24 +175,35 @@ max_z_accel: 100
 ########################################
 [gcode_macro START_PRINT]
 gcode:
-    #{% set BED_TEMP = params.BED_TEMP|default(60)|float %}
-    #{% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
-    # Start bed heating
-    #M140 S{BED_TEMP}
-    # Use absolute coordinates
-    #G90
-    # Reset the G-Code Z offset (adjust Z offset if needed)
-    #SET_GCODE_OFFSET Z=0.0
-    # Home the printer
-    #G28
-    # Move the nozzle near the bed
-    #G1 Z5 F3000
-    # Move the nozzle very close to the bed
-    #G1 Z0.15 F300
-    # Wait for bed to reach temperature
-    #M190 S{BED_TEMP}
-    # Set and wait for nozzle to reach temperature
-    #M109 S{EXTRUDER_TEMP}
+  # Fetch data from slicer
+  {% set target_bed = params.BED_TEMP|default(80)|int %}
+  {% set target_extruder = params.EXTRUDER_TEMP|default(240)|int %}
+  {% set x_wait = printer.toolhead.axis_maximum.x|float / 2 %}
+  {% set y_wait = printer.toolhead.axis_maximum.y|float / 2 %}
+
+  # Home the printer and set absolute positioning
+  G28                                                   # Full home (XYZ)
+  G90                                                   # Absolute position
+  BED_MESH_CLEAR                                        # Clear old saved bed mesh (if any)
+
+  # Check if the bed temp is higher than 90c - if so then trigger a heatsoak.
+  {% if params.BED_TEMP|int > 90 %}
+    M106 S255                                           # Turn on the PT-fan
+    G1 X{x_wait} Y{y_wait} Z15 F9000                    # Go to center of the bed
+    M190 S{target_bed}                                  # Set the target temp for the bed
+  # If the bed temp is not over 90c, then skip the heatsoak and just heat up to set temp
+  {% else %}
+    G1 X{x_wait} Y{y_wait} Z15 F9000                    # Go to center of the bed
+    M190 S{target_bed}                                  # Set the target temp for the bed
+  {% endif %}
+
+  # Heat up the hotend up to target via data from slicer
+  G1 X{x_wait} Y{y_wait} Z15 F9000                      # Go to center of the bed
+  M107                                                  # Turn off partcooling fan
+  M109 S{target_extruder}                               # Heat the hotend to set temp
+
+  ##  Bed mesh
+  BED_MESH_CALIBRATE ADAPTIVE=1                        # Start adaptive bed mesh
 
 [gcode_macro END_PRINT]
 gcode:
