--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -202,8 +202,22 @@ gcode:
   M107                                                  # Turn off partcooling fan
   M109 S{target_extruder}                               # Heat the hotend to set temp
 
-  ##  Bed mesh
-  BED_MESH_CALIBRATE ADAPTIVE=1                        # Start adaptive bed mesh
+  # Bed mesh
+  BED_MESH_CALIBRATE ADAPTIVE=1                         # Start adaptive bed mesh
+
+  # Primeline
+  PRIMELINE                                             # Purge
+
+[gcode_macro PRIMELINE]
+gcode:
+  G90
+  G0 X-4 Y-4 F10000                                     # Go to starting point
+  G0 Z0.4                                               # Raise Z to 0.4
+  G91                                                   # Incremental positioning 
+  G1 E10 F500                                           # Purge
+  G1 X150 E20 F1000                                     # Primeline
+  G1 Z10                                                # Lift nozzle from the bed
+  G90       
 
 [gcode_macro END_PRINT]
 gcode:
