rename probe macros and update y_offset value

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -80,25 +80,25 @@ run_current: 0.5
 pin: PE5
 value: 0
 
-[gcode_macro Probe_Deploy]
+[gcode_macro PROBE_DOWN]
 gcode:
   SET_PIN PIN=probe_enable VALUE=1
 
-[gcode_macro Probe_Stow]
+[gcode_macro PROBE_UP]
 gcode:
   SET_PIN PIN=probe_enable VALUE=0
 
 [probe]
 pin: ^!PE4
 x_offset: 0
-y_offset: 24 # nozzle_y_position (124) - probe_y_position (100)
+y_offset: 20
 #z_offset: 0
 deactivate_on_each_sample: False
 activate_gcode:
-  Probe_Deploy
+  PROBE_DOWN
   G4 P500 # allow time for probe to deploy
 deactivate_gcode:
-  Probe_Stow
+  PROBE_UP
 
 ### BED
 [heater_bed]
