recalibrated extruder gear_ratio and pressure advance

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -130,19 +130,19 @@ step_pin: PD15
 dir_pin: PD14
 enable_pin: !PC7
 
-rotation_distance: 52.05 # was 55
-gear_ratio: 45:14, 37:17
+rotation_distance: 22.6
+gear_ratio: 50:17
 microsteps: 16
 full_steps_per_rotation: 200
 
 nozzle_diameter: 0.400
 filament_diameter: 1.750
+
 heater_pin: PB3
-max_extrude_only_distance: 200
+max_extrude_only_distance: 101
 max_power: 1.0
 sensor_type: Generic 3950
 sensor_pin: PA2
-#smooth_time: 3.0
 control: pid
 pid_Kp: 30.474
 pid_Ki: 1.302
@@ -151,6 +151,7 @@ min_extrude_temp: 170
 min_temp: 0
 max_temp: 270
 #pressure_advance: 0.23
+pressure_advance: 0.080000
 
 ### Cooling
 [fan]
