--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -245,14 +245,14 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = 1.397
+#*# z_offset = 1.700
 #*#
-#*# [bed_mesh las probe with induction]
+#*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.018333, 0.005833, 0.007500
-#*# 	-0.041667, -0.012500, -0.027500
-#*# 	-0.002500, -0.030000, 0.011667
+#*# 	  0.060000, 0.037500, -0.017500
+#*# 	  0.062500, 0.045000, -0.015000
+#*# 	  0.070000, 0.052500, -0.017500
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
@@ -261,7 +261,7 @@ gcode:
 #*# tension = 0.2
 #*# min_x = 16.0
 #*# max_x = 232.0
-#*# min_y = 0.0
+#*# min_y = 24.0
 #*# max_y = 205.0
 #*#
 #*# [bed_mesh default]
