increase z_hop_speed

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -115,7 +115,7 @@ max_temp: 110
 [safe_z_home]
 home_xy_position: 124, 100
 z_hop: 5
-z_hop_speed: 5
+z_hop_speed: 10
 
 [bed_mesh]
 speed: 120
@@ -203,10 +203,10 @@ gcode:
   M107                                                  # Turn off partcooling fan
   M109 S{target_extruder}                               # Heat the hotend to set temp
 
-  # Bed mesh
+  ##  Bed mesh
   BED_MESH_CALIBRATE ADAPTIVE=1                         # Start adaptive bed mesh
 
-  # Primeline
+  ## Primeline
   PRIMELINE                                             # Purge
 
 [gcode_macro PRIMELINE]
